--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
+cffi==1.7.0
+cryptography==1.4
+enum34==1.1.6
 future==0.15.2
+idna==2.1
+ipaddress==1.0.16
 keyring==9.1
+mongoengine==0.10.6
+ndg-httpsclient==0.4.1
+numpy==1.11.1
+pandas==0.18.1
+pyasn1==0.1.9
+pycparser==2.14
 pyexcel-io==0.2.0
 pyexcel-xls==0.2.0
+pymongo==3.2.2
+pyOpenSSL==16.0.0
 pyTelegramBotAPI==2.1.2
+python-dateutil==2.5.3
+python-http-client==2.1.0
+pytz==2016.6.1
 requests==2.10.0
+sendgrid==3.0.0
 six==1.10.0
 urllib3==1.16
 validate-email==1.3
