--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,14 @@ validate-email==1.3
 xlrd==1.0.0
 xlwt==1.1.2
 yagmail==0.5.140
+EasyProcess==0.2.2
+Ghost.py==0.2.3
+grab==0.6.30
+lxml==3.6.0
+pycurl==7.43.0
+pytils==0.3
+selection==0.0.11
+selenium==2.53.6
+six==1.10.0
+user-agent==0.1.4
+weblib==0.1.20
