--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+amqp==1.4.9
+anyjson==0.3.3
 backports-abc==0.4
+billiard==3.3.0.23
+celery==3.1.23
 certifi==2016.8.2
 cffi==1.7.0
 cryptography==1.4
@@ -11,6 +15,7 @@ grab==0.6.30
 idna==2.1
 ipaddress==1.0.16
 keyring==9.1
+kombu==3.0.35
 lxml==3.6.0
 mongoengine==0.10.6
 ndg-httpsclient==0.4.1
@@ -28,6 +33,7 @@ python-dateutil==2.5.3
 python-http-client==2.1.0
 pytils==0.3
 pytz==2016.6.1
+redis==2.10.5
 requests==2.10.0
 selection==0.0.11
 selenium==2.53.6
