--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-amqp==1.4.9
 anyjson==0.3.3
 backports-abc==0.4
 billiard==3.3.0.23
-celery==3.1.23
 certifi==2016.8.2
 cffi==1.7.0
 cryptography==1.4
@@ -10,8 +8,10 @@ EasyProcess==0.2.2
 enum34==1.1.6
 future==0.15.2
 futures==3.0.5
+gevent==1.1.2
 Ghost.py==0.2.3
 grab==0.6.30
+greenlet==0.4.10
 idna==2.1
 ipaddress==1.0.16
 keyring==9.1
@@ -21,6 +21,7 @@ mongoengine==0.10.6
 ndg-httpsclient==0.4.1
 numpy==1.11.1
 pandas==0.18.1
+profilehooks==1.8.1
 pyasn1==0.1.9
 pycparser==2.14
 pycurl==7.43.0
@@ -33,15 +34,12 @@ python-dateutil==2.5.3
 python-http-client==2.1.0
 pytils==0.3
 pytz==2016.6.1
-redis==2.10.5
 requests==2.10.0
 selection==0.0.11
 selenium==2.53.6
 sendgrid==3.0.0
 singledispatch==3.4.0.3
 six==1.10.0
-tornado==4.4.1
-trollius==2.1
 urllib3==1.16
 user-agent==0.1.4
 validate-email==1.3
